cmake_minimum_required(VERSION 3.15)
project(country_road)

set(CMAKE_CXX_STANDARD 14)

add_executable(country_road
        extracredit/.idea/deployment.xml
        extracredit/.idea/extracredit.iml
        extracredit/.idea/misc.xml
        extracredit/.idea/modules.xml
        extracredit/.idea/workspace.xml
        extracredit/cmake-build-debug/cmake_install.cmake
        extracredit/cmake-build-debug/CMakeCache.txt
        extracredit/cmake-build-debug/extracredit.cbp
        extracredit/cmake-build-debug/extracredit.exe
        extracredit/cmake-build-debug/Makefile
        extracredit/CMakeLists.txt
        extracredit/main.cpp
        README.md)
